--- a/css/styles.css
+++ b/css/styles.css
@@ -1,21 +1,30 @@
 body {
-  padding: 5%;
+  padding: 3%;
   background-color: lightgray;
   }
 h1 {
   text-align: center;
   font-family: monospace;
 }
-.nl image {
+.page-header {
+  navbar-fixed-top;
+  border-bottom: none;
+  padding-bottom: 40px;
+}
+.about img {
   img.display:
     display: block;
-    margin-left: auto;
-    margin-right: auto;
+    float: left;
+    padding: 5px;
 }
 .about {
   font-family: monospace;
   text-align: center;
+  margin-left: auto;
+  margin-right: auto;
 }
 .about p {
-  max-width: 75%;
+  text-align: justify;
+  font-size: 12pt;
+  max-width: 100%;
 }
