--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,15 @@
 body {
-  padding: 3%;
-  background-color: lightgray;
+  padding: 2%;
+  background-color: #d5d9d8;
   }
 h1 {
+  color: #ffffff;
+  text-shadow: 3px 3px 5px #000000;
   text-align: center;
   font-family: monospace;
+}
+.jumbotron {
+  background-color: gray;
 }
 .page-header {
   navbar-fixed-top;
@@ -27,4 +32,10 @@ h1 {
   text-align: justify;
   font-size: 12pt;
   max-width: 100%;
+}
+.center {
+  font-size: 12pt;
+  width: 30%;
+  margin:0 auto;
+  text-align: left;
 }
