--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,10 @@ h1 {
   text-shadow: 3px 3px 5px #000000;
   text-align: center;
 }
+h2 {
+  text-align: center;
+  text-shadow: 3px 3px 5px #a8a8a8;
+}
 p {
   font-size: 12pt;
 }
@@ -19,21 +23,12 @@ p {
   border-bottom: none;
   padding-bottom: 40px;
 }
-.about img {
-  img.display:
-    display: block;
-    float: left;
-    padding: 5px;
-}
 .about {
   text-align: center;
   margin-left: auto;
   margin-right: auto;
 }
-.about h2 {
-  text-shadow: 3px 3px 5px #a8a8a8;
-}
-.about p {
+p {
   text-align: justify;
   max-width: 100%;
 }
@@ -51,8 +46,7 @@ p {
   font-weight: bold;
   color: #f60000;
 }
-.carousel-slide {
-  padding: 10px;
+.item img {
   min-height: 500px;
   max-height: 500px;
   min-width: 700px;
@@ -61,6 +55,13 @@ p {
   margin-left: auto;
   margin-right: auto;
 }
-.carousel-caption {
+.carousel-caption p {
   color: white;
+  text-align: center;
   text-shadow: 2px 2px 3px black;
+}
+.about img {
+    float: left;
+    max-width: 400px;
+    padding: 5px;
+}
