--- a/css/styles.css
+++ b/css/styles.css
@@ -8,9 +8,14 @@ h1 {
   text-shadow: 3px 3px 5px #000000;
   text-align: center;
 }
-h2, h3 {
+h2 {
   text-align: center;
   text-shadow: 3px 3px 5px #a8a8a8;
+}
+h3 {
+  font-weight: bold;
+  text-align: center;
+  text-shadow: 1px 1px 2px #a8a8a8;
 }
 p {
   font-size: 12pt;
@@ -40,7 +45,6 @@ p {
   color: white;
   margin: 20px;
   border: 3px solid yellow;
-  border-right: -25px;
   padding: 20px;
   background-color: black;
 }
@@ -72,7 +76,10 @@ ul {
   text-shadow: 2px 2px 3px black;
 }
 .slide {
-  padding: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 .about img {
     float: left;
@@ -82,9 +89,17 @@ ul {
 .btn {
   text-align: center;
 }
-.repository {
+.repository p{
+  text-align: center;
+  font-size: 23pt;
   color: yellow;
+  border-radius: 10px;
   background-color: orange;
-  padding: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
   text-shadow: 2px 2px 3px black;
+}
+.row {
+  border: 2px solid black;
+  display: inline-block;
 }
